# secrets-cli

./: .gitignore  Readme.md  main.py  pangea.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  package-lock.json
frontend/src/pages/: index.tsx
secrets_cli/: secrets_cli.py
